--- a/index.html
+++ b/index.html
@@ -1,1 +1,132 @@
-Weerayut Buaphet
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weerayut Buaphet - Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 24px;
+        }
+        .contact-info {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .section-title {
+            font-size: 18px;
+            font-weight: bold;
+            text-transform: uppercase;
+            border-bottom: 2px solid #000;
+            padding-bottom: 5px;
+            margin-bottom: 10px;
+        }
+        .subsection-title {
+            font-size: 16px;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        ul li {
+            margin-bottom: 5px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Weerayut Buaphet</h1>
+        <div class="contact-info">
+            <p>(+66)80 6789 276 • weerayut.b_s20@vistec.ac.th • weerayutbu.github.io</p>
+        </div>
+        <div class="section">
+            <div class="section-title">Summary</div>
+            <p>I'm a fourth-year Ph.D. student in the Natural Language Processing and Representation Learning Lab (NRL) at VISTEC, Thailand, co-supervised by Assoc. Prof. Dr. Sarana and Assoc. Prof. Dr. Attapol.</p>
+            <p>My specialization is in information extraction tasks, with a research focus on Named Entity Recognition (NER) and Representation Learning. My work aims to address the challenges in NER, including limited resources for Thai NER, issues related to open class problems with unseen and long-tail entities, and multilingual and domain-specific. My co-authors and I have previously worked on developing a Thai Fine-grained Nested NER dataset to bridge the gap between low-resource and high-resource languages. Additionally, we have explored few-shot learning techniques, leveraging large language models to generate relevant examples and enhance the effectiveness of few-shot NER.</p>
+            <p>Currently, I am focusing on creating a bilingual finance-NER dataset in Thai and English to study knowledge transfer from high-resource to low-resource languages.</p>
+        </div>
+        <div class="section">
+            <div class="section-title">Education</div>
+            <div>
+                <p><strong>Ph.D. in Information Science and Technology</strong></p>
+                <p>Vidyasirimedhi Institute of Science and Technology (VISTEC), Aug 2020 - Present</p>
+                <p>GPA: 4.00/4.00</p>
+                <p>Relevant coursework: Natural Language Processing, Computational Machine Intelligence and Applications</p>
+            </div>
+            <div>
+                <p><strong>B.Eng. in Computer Engineering</strong></p>
+                <p>Rajamangala University of Technology Lanna (RMUTL-CM), Mar 2016 - Mar 2020</p>
+                <p>GPA: 3.62/4.00 (Top 1)</p>
+                <p>Relevant coursework: Data Structures and Algorithms, Operating Systems, Software Engineering</p>
+            </div>
+        </div>
+        <div class="section">
+            <div class="section-title">Open Source Contributions</div>
+            <div class="subsection-title">Open Source NER Models</div>
+            <p>Part of the development team for Thai NER datasets and models, including a nested NER model for fine-grained classification and a bilingual (TH-EN) NER model for the financial domain</p>
+            <ul>
+                <li>Developed Thai nested NER models and quality control (QC) dataset.</li>
+                <li>Developed bilingual NER model for the financial domain and quality control (QC) dataset.</li>
+            </ul>
+        </div>
+        <div class="section">
+            <div class="section-title">Technical Skills</div>
+            <div class="subsection-title">Languages</div>
+            <ul>
+                <li>Thai (Native), English</li>
+            </ul>
+            <div class="subsection-title">Tools and Frameworks</div>
+            <ul>
+                <li>PyTorch, Docker, SQL</li>
+            </ul>
+            <div class="subsection-title">Programming Languages</div>
+            <ul>
+                <li>Python, C, C++, Java, HTML, PHP, JavaScript</li>
+            </ul>
+        </div>
+        <div class="section">
+            <div class="section-title">Internship</div>
+            <div>
+                <p><strong>VISTEC, Rayong, Thailand: Researcher Assistant</strong></p>
+                <p>Nov 2019 – Aug 2020</p>
+                <ul>
+                    <li>Conducted literature review and implemented a baseline Thai Nested Named Entity Recognition model using Python and Torch.</li>
+                    <li>Performed quality control and error analysis to ensure the accuracy and reliability of the Thai N-NER model.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="section">
+            <div class="section-title">Academic Projects</div>
+            <div>
+                <p><strong>Thai Nested Named Entity Recognition Corpus</strong></p>
+                <p>Weerayut Buaphet, Can Udomcharoenchaikit, Peerat Limkonchotiwat, Attapol Rutherford, and Sarana Nutanong. 2022. In Findings of the Association for Computational Linguistics: ACL 2022, pages 1473–1486, Dublin, Ireland. Association for Computational Linguistics.</p>
+                <p>Aug 2019 – May 2022</p>
+            </div>
+            <div>
+                <p><strong>Mitigating Spurious Correlation in Natural Language Understanding with Counterfactual Inference</strong></p>
+                <p>Can Udomcharoenchaikit, Wuttikorn Pornwattanarat, Patomporn Payoungkhamdee, Karunethai Masuk, Weerayut Buaphet, Ekapol Chuangsuwanich, and Sarana Nutanong. 2022. In Proceedings of the 2022 Conference on Empirical Methods in Natural Language Processing, pages 11308–11321, Abu Dhabi, United Arab Emirates. Association for Computational Linguistics.</p>
+                <p>Dec 2022</p>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
