--- a/index.html
+++ b/index.html
@@ -92,15 +92,11 @@
             <div class="section-title">Technical Skills</div>
             <div class="subsection-title">Languages</div>
             <ul>
-                <li>Thai (Native), English</li>
+                <li>Thai (Native), English (TOEFL-ITP 550)</li>
             </ul>
             <div class="subsection-title">Tools and Frameworks</div>
             <ul>
-                <li>PyTorch, Docker, SQL</li>
-            </ul>
-            <div class="subsection-title">Programming Languages</div>
-            <ul>
-                <li>Python, C, C++, Java, HTML, PHP, JavaScript</li>
+                <li>Python, PyTorch, Docker, SQL, C, C++, Java, HTML, PHP, JavaScript</li>
             </ul>
         </div>
         <div class="section">
