polish and update activity

--- a/index.html
+++ b/index.html
@@ -134,13 +134,26 @@
 
         </div>
         <div class="section">
-            <div class="section-title">Open Source Contributions</div>
+            <div class="section-title">OPEN SOURCE CONTRIBUTIONS AND ACTIVITIES</div>
             <div class="subsection-title">Open Source NER Models</div>
             <p>Part of the development team for Thai NER datasets and models, including a nested NER model for fine-grained classification and a bilingual (TH-EN) NER model for the financial domain</p>
             <ul>
                 <li>Developed Thai nested NER models and quality control (QC) dataset.</li>
                 <li>Developed bilingual NER model for the financial domain and quality control (QC) dataset.</li>
             </ul>
+
+            <div class="subsection-title">Mentor AI Builders (2022)</div>
+            <p>This program aims to develop knowledge in Data Science and Artificial Intelligence (AI) for middle and high school students interested in practical applications. My friend and I are responsible for five students working on various projects, such as question generation, fake news detection, and creating a dataset and system to support a plant tissue laboratory.</p>
+
+            <div class="subsection-title">Internet of Things (11th 9 RMUT competition 2019) - RMUTSB</div>
+            <p>We got 2nd place in the RMUT group IoT competition in Thailand. We used an ESP20 to read sensor data and send it via MQTT to a Raspberry Pi server, which visualized the data on a web interface. I programmed the visualization and configured the ESP20 while my friend handled the hardware connections</p>
+
+            <div class="subsection-title">The Robotic Design Contest (RDC 2018)</div>
+            <p>This program selects national representatives for the International Design Contest RoBoCon (IDC RoBoCon). All teamsare required to design a robot to solve a provided problem. It promotes equality with mixed teams, equal resources, and collaboration, including training sessions at all levels. My friend and I achieved the following:</p>
+            <ul>
+                <li>2nd place in the Northern region at Chiang Mai University.</li>
+                <li>1st place in RDC2018 Thailand at Chulalongkorn University.</li>
+                <li>3rd place internationally at the Tokyo Institute of Technology.</li>
         </div>
     </div>
 </body>
