--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
                 <p><strong>VISTEC, Rayong, Thailand: Researcher Assistant</strong></p>
                 <p>Nov 2019 – Aug 2020</p>
                 <ul>
-                    <li>Conducted literature review and implemented a baseline Thai Nested Named Entity Recognition model using Python and Torch.</li>
-                    <li>Performed quality control and error analysis to ensure the accuracy and reliability of the Thai N-NER model.</li>
+                    <li>Conducted literature review and implemented a baseline Thai Nested Named Entity Recognition model using Python and Torch. Performed quality control and error analysis to ensure the accuracy and reliability of the Thai N-NER model.</li>
                 </ul>
             </div>
         </div>
