--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
         </div>
         <div class="section">
             <div class="section-title">OPEN SOURCE CONTRIBUTIONS AND ACTIVITIES</div>
+            <div class="subsection-title">Reviewers</div>
+            <p>ARR EMNLP 2024</p>
             <div class="subsection-title">Open Source NER Models</div>
             <p>Part of the development team for Thai NER datasets and models, including a nested NER model for fine-grained classification and a bilingual (TH-EN) NER model for the financial domain</p>
             <ul>
