--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
                 <li>3rd place internationally at the Tokyo Institute of Technology.</li>
             </ul>
         </div>
+        <div class="section">
+            <div class="section-title">News</div>
+             <ul>
+                <li>16.09.24: Visiting Ph.D student at ITU.</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
