--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Weerayut Buaphet</h1>
-        <div class="contact-info">
-            <p>(+66) 80 6789 276 • weerayut.b_s20@vistec.ac.th • weerayutbu.github.io</p>
-        </div>
+        <h1>Weerayut Buaphet (วีรยุทธ บัวเพชร)</h1>
+        <div class="contact-info"><p>(+66) 80 6789 276 • weerayut.b_s20@vistec.ac.th • weerayutbu.github.io</p></div>
+
         <div class="section">
             <div class="section-title">Summary</div>
             <p>I am a fifth-year Ph.D. student at the Natural Language Processing and Representation Learning (NRL) Lab at VISTEC, Thailand, under the supervision of Assoc. Prof. Dr. Sarana Nutanong and co-supervision of Assoc. Prof. Dr. Attapol Rutherford.</p>
@@ -79,7 +78,7 @@
                 <p>Relevant coursework: Data Structures and Algorithms, Operating Systems, Software Engineering</p>
             </div>
         </div>
-        <div class="section">
+        <!-- <div class="section">
             <div class="section-title">Technical Skills</div>
             <div class="subsection-title">Languages</div>
             <ul>
@@ -89,7 +88,7 @@
             <ul>
                 <li>Python, PyTorch, Docker, SQL, C, C++, Java, HTML, PHP, JavaScript</li>
             </ul>
-        </div>
+        </div> -->
         <div class="section">
             <div class="section-title">Internship</div>
             <div>
