--- a/index.html
+++ b/index.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Weerayut Buaphet (วีรยุทธ บัวเพชร) - Ph.D. student specializing in NLP, Named Entity Recognition, and Representation Learning.">
-    <meta name="keywords"
-        content="Weerayut Buaphet, วีรยุทธ บัวเพชร, Natural Language Processing, NLP, Named Entity Recognition, VISTEC, Thailand, Bilingual NER, Finance NER">
-    <meta name="author" content="Weerayut Buaphet">
-    <meta property="og:title" content="Weerayut Buaphet - Resume">
-    <meta property="og:description"
-        content="Ph.D. student at VISTEC specializing in NLP and Named Entity Recognition (NER).">
-    <meta property="og:url" content="https://weerayutbu.github.io">
-    <meta property="og:type" content="website">
-
-    <title>Weerayut Buaphet (วีรยุทธ บัวเพชร) - Resume</title>
+    <title>Weerayut Buaphet - CV</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Include Font Awesome for Icons (optional) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-
-
 <body>
-    <div class="container">
-        <h1>Weerayut Buaphet (วีรยุทธ บัวเพชร)</h1>
-        <div class="contact-info">
-            <p>
-                <a href="mailto:weerayut.b_s20@vistec.ac.th">Email</a> | 
-                <a href="https://scholar.google.com/citations?user=GjdGYJIAAAAJ" target="_blank">Google Scholar</a> | 
-                <a href="https://www.linkedin.com/in/weerayutbu/" target="_blank">LinkedIn</a> | 
-                <a href="https://github.com/WeerayutBu" target="_blank">GitHub</a>
-            </p>
+    <!-- Header Section -->
+    <header>
+        <div class="header-content">
+            <div class="icon-container">
+                <i class="fas fa-dog profile-icon"></i> <!-- Dog Icon for Profile Image -->
+            </div>
+            <div class="header-text">
+                <h1>Weerayut Buaphet <span>(วีรยุทธ บัวเพชร)</span></h1>
+                <p>Ph.D. Student | NLP Researcher | VISTEC, Thailand</p>
+                <!-- Contact Links -->
+                <p class="contact-links">
+                    <a href="mailto:weerayut.b_s20@vistec.ac.th">Email</a>
+                    <a href="https://www.linkedin.com/in/weerayutbu/" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/WeerayutBu" target="_blank">GitHub</a>
+                    <a href="cv.html" target="_blank">CV</a>
+                </p>
+            </div>
         </div>
-        <div class="section">
-            <div class="section-title">Summary</div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="https://scholar.google.com/citations?user=GjdGYJIAAAAJ" target="_blank">Google Scholar</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Main Content Section -->
+    <main>
+        
+        <section>
+            <div><strong>Summary</strong></div>
             <p>I am a fifth-year Ph.D. student at the Natural Language Processing and Representation Learning (NRL) Lab
                 at VISTEC, Thailand, under the supervision of Assoc. Prof. Dr. Sarana Nutanong and co-supervision of
                 Assoc. Prof. Dr. Attapol Rutherford.</p>
@@ -45,121 +53,39 @@
                 and enhance the effectiveness of few-shot NER.</p>
             <p>Currently, I am focusing on creating a bilingual finance-NER dataset in Thai and English to study
                 knowledge transfer from high-resource to low-resource languages.</p>
-        </div>
+        </section>
 
-        <div class="section">
-            <div class="section-title">Education</div>
+        <section>
+            <div><strong>Internship</strong></div>
             <div>
-                <p><strong>Ph.D. in Information Science and Technology</strong></p>
-                <p>Vidyasirimedhi Institute of Science and Technology (VISTEC), Aug 2020 - Present</p>
-                <p>GPA: 4.00/4.00</p>
-                <p>Relevant coursework: Natural Language Processing, Computational Machine Intelligence and Applications
+                <p>
+                    <strong>• Research Assistant:</strong> VISTEC, Rayong, Thailand (Nov 2019 – Aug 2020) </br>
+                    Developed a Thai Nested Named Entity Recognition (N-NER) model, ensuring accuracy through testing and analysis.<br>
                 </p>
-            </div>
-            <div>
-                <p><strong>B.Eng. in Computer Engineering</strong></p>
-                <p>Rajamangala University of Technology Lanna (RMUTL-CM), Mar 2016 - Mar 2020</p>
-                <p>GPA: 3.62/4.00 (Top 1)</p>
-                <p>Relevant coursework: Data Structures and Algorithms, Operating Systems, Software Engineering</p>
-            </div>
-        </div>
+                <p>
+                    <strong>• Visiting Ph.D.:</strong> IT University of Copenhagen, Denmark (Sep 2024 – July 2025) </br>
+                    Conducted research on cross-lingual NER and multilingual representation learning under the supervision of Prof. Rob van der Goot.
+                </p>
 
-        <div class="section">
-            <div class="section-title">Internship</div>
-            <div>
-                <p><strong>VISTEC, Rayong, Thailand: Researcher Assistant</strong></p>
-                <p>Nov 2019 – Aug 2020</p>
-                <ul>
-                    <li>Conducted literature review and implemented a baseline Thai Nested Named Entity Recognition
-                        model using Python and Torch. Performed quality control and error analysis to ensure the
-                        accuracy and reliability of the Thai N-NER model.</li>
                 </ul>
             </div>
-        </div>
-        <div class="section">
-            <div class="section-title">Academic Projects</div>
-            <div>
-                <p><strong>Thai Nested Named Entity Recognition Corpus.</strong></p>
-                <p>Weerayut Buaphet, Can Udomcharoenchaikit, Peerat Limkonchotiwat, Attapol Rutherford, and Sarana
-                    Nutanong. 2022. In Findings of the Association for Computational Linguistics: ACL 2022, pages
-                    1473–1486, Dublin, Ireland. Association for Computational Linguistics.</p>
-                <p>Aug 2019 – May 2022</p>
-            </div>
-            <div>
-                <p><strong>Mitigating Spurious Correlation in Natural Language Understanding with Counterfactual
-                        Inference.</strong></p>
-                <p>Can Udomcharoenchaikit, Wuttikorn Ponwitayarat, Patomporn Payoungkhamdee, Kanruethai Masuk, Weerayut
-                    Buaphet, Ekapol Chuangsuwanich, and Sarana Nutanong. 2022. In Proceedings of the 2022 Conference on
-                    Empirical Methods in Natural Language Processing, pages 11308–11321, Abu Dhabi, United Arab
-                    Emirates. Association for Computational Linguistics.</p>
-                <p>Dec 2022</p>
-            </div>
+        </section>
 
-            <div>
-                <p><strong>Cross-Lingual Data Augmentation For Thai Question-Answering.</strong></p>
-                <p>Parinthapat Pengpun, Can Udomcharoenchaikit, Weerayut Buaphet, and Peerat Limkonchotiwat. 2023. In
-                    Proceedings of the 1st GenBench Workshop on (Benchmarking) Generalisation in NLP, pages 193–203,
-                    Singapore. Association for Computational Linguistics.</p>
-                <p>Dec 2023</p>
-            </div>
+        <section>
+            <div><strong>Services</strong></div>
+                <p><strong>• Co-organizer:</strong><br>
+                    - W-NUT 2025 (collocated with NAACL2025) and MultiLexNorm2<br>
+                <p>
+                <p><strong>• Reviewers:</strong><br>
+                    - ARR-EMNLP 2024
+        </section>
 
-            <div>
-                <p><strong>Few-shot Named Entity Recognition</strong></p>
-                <p>In this project, we focus on leveraging the capabilities of large language models to generate
-                    relevant examples, thereby enhancing the effectiveness of few-shot NER.</p>
-                <p>Under review</p>
-            </div>
 
-            <div>
-                <p><strong>Bi-lingual Named Entity Recognition for financing</strong></p>
-                <p>Creating a finance-NER dataset composed of two languages, Thai and English. This project aims to
-                    study the knowledge transfer from high-resource to low-resource languages in the financial domain.
-                </p>
-                <p>Ongoing project</p>
-            </div>
+    </main>
 
-        </div>
-        <div class="section">
-            <div class="section-title">OPEN SOURCE CONTRIBUTIONS AND ACTIVITIES</div>
-            <div class="subsection-title">Reviewers</div>
-            <p>• 2024: ARR-EMNLP</p>
-            <div class="subsection-title">Open Source NER Models</div>
-            <p>Part of the development team for Thai NER datasets and models, including a nested NER model for
-                fine-grained classification and a bilingual (TH-EN) NER model for the financial domain</p>
-            <!-- <ul>
-                <li>Developed Thai nested NER models and quality control (QC) dataset.</li>
-                <li>Developed bilingual NER model for the financial domain and quality control (QC) dataset.</li>
-            </ul> -->
-
-            <div class="subsection-title">Mentor AI Builders (2022)</div>
-            <p>This program aims to develop knowledge in Data Science and Artificial Intelligence (AI) for middle and
-                high school students interested in practical applications. My friend and I are responsible for five
-                students working on various projects, such as question generation, fake news detection, and creating a
-                dataset and system to support a plant tissue laboratory.</p>
-
-            <div class="subsection-title">Internet of Things (11th 9 RMUT competition 2019) - RMUTSB</div>
-            <p>We got 2nd place in the RMUT group IoT competition in Thailand. We used an ESP20 to read sensor data and
-                send it via MQTT to a Raspberry Pi server, which visualized the data on a web interface. I programmed
-                the visualization and configured the ESP20 while my friend handled the hardware connections</p>
-
-            <div class="subsection-title">The Robotic Design Contest (RDC 2018)</div>
-            <p>This program selects national representatives for the International Design Contest RoBoCon (IDC RoBoCon).
-                All teamsare required to design a robot to solve a provided problem. It promotes equality with mixed
-                teams, equal resources, and collaboration, including training sessions at all levels. My friend and I
-                achieved the following:</p>
-            <ul>
-                <li>2nd place in the Northern region at Chiang Mai University.</li>
-                <li>1st place in RDC2018 Thailand at Chulalongkorn University.</li>
-                <li>3rd place internationally at the Tokyo Institute of Technology.</li>
-            </ul>
-        </div>
-        <div class="section">
-            <div class="section-title">News</div>
-            <ul>
-                <li>16.09.24 - 30.07.25: Visiting Ph.D. student at ITU under supervisor Rob van der Goot.</li>
-            </ul>
-        </div>
-    </div>
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Weerayut Buaphet | <a href="contact.html">Contact Me</a></p>
+    </footer>
 </body>
-
 </html>
