--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <!-- Include Font Awesome for Icons (optional) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <!-- Header Section -->
     <header>
@@ -23,7 +25,7 @@
                     <a href="mailto:weerayut.b_s20@vistec.ac.th">Email</a>
                     <a href="https://www.linkedin.com/in/weerayutbu/" target="_blank">LinkedIn</a>
                     <a href="https://github.com/WeerayutBu" target="_blank">GitHub</a>
-                    <a href="cv.html" target="_blank">CV</a>
+                    <a href="cv.html">CV</a>
                 </p>
             </div>
         </div>
@@ -31,56 +33,62 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="https://scholar.google.com/citations?user=GjdGYJIAAAAJ" target="_blank">Google Scholar</a></li>
+                <li><a href="https://scholar.google.com/citations?user=GjdGYJIAAAAJ" target="_blank">Google Scholar</a>
+                </li>
             </ul>
         </nav>
     </header>
 
+
     <!-- Main Content Section -->
     <main>
-        
         <section>
             <div><strong>Summary</strong></div>
             <p>I am a fifth-year Ph.D. student at the Natural Language Processing and Representation Learning (NRL) Lab
                 at VISTEC, Thailand, under the supervision of Assoc. Prof. Dr. Sarana Nutanong and co-supervision of
-                Assoc. Prof. Dr. Attapol Rutherford.</p>
+                Assoc. Prof. Dr. Attapol Rutherford.
+            </p>
             <p>My research focuses on information extraction tasks, Named Entity Recognition (NER), and Representation
                 Learning. My work aims to address the challenges in NER, including limited resources for Thai NER,
                 issues related to open class problems with unseen and long-tail entities, and multilingual and
                 domain-specific. My co-authors and I have previously worked on developing a Thai Fine-grained Nested NER
                 dataset to bridge the gap between low-resource and high-resource languages. Additionally, we have
                 explored few-shot learning techniques, leveraging large language models to generate relevant examples
-                and enhance the effectiveness of few-shot NER.</p>
+                and enhance the effectiveness of few-shot NER.
+            </p>
+
             <p>Currently, I am focusing on creating a bilingual finance-NER dataset in Thai and English to study
-                knowledge transfer from high-resource to low-resource languages.</p>
+                knowledge transfer from high-resource to low-resource languages.
+            </p>
         </section>
+
 
         <section>
             <div><strong>Internship</strong></div>
             <div>
                 <p>
                     <strong>• Research Assistant:</strong> VISTEC, Rayong, Thailand (Nov 2019 – Aug 2020) </br>
-                    Developed a Thai Nested Named Entity Recognition (N-NER) model, ensuring accuracy through testing and analysis.<br>
+                    Developed a Thai Nested Named Entity Recognition (N-NER) model, ensuring accuracy through testing
+                    and analysis.<br>
                 </p>
                 <p>
-                    <strong>• Visiting Ph.D.:</strong> IT University of Copenhagen, Denmark (Sep 2024 – July 2025) </br>
-                    Conducted research on cross-lingual NER and multilingual representation learning under the supervision of Prof. Rob van der Goot.
+                    <strong>• Visiting Ph.D.:</strong>
+                    IT University of Copenhagen, Denmark (Sep 2024 – July 2025) </br> Conducted research on
+                    cross-lingual NER and multilingual representation learning under the supervision of Prof. Rob van
+                    der Goot.
                 </p>
-
-                </ul>
             </div>
         </section>
 
         <section>
             <div><strong>Services</strong></div>
-                <p><strong>• Co-organizer:</strong><br>
-                    - W-NUT 2025 (collocated with NAACL2025) and MultiLexNorm2<br>
-                <p>
-                <p><strong>• Reviewers:</strong><br>
-                    - ARR-EMNLP 2024
+            <p><strong>• Co-organizer:</strong><br>
+                - W-NUT 2025 (collocated with NAACL2025) and MultiLexNorm2<br>
+            <p>
+            <p><strong>• Reviewers:</strong><br>
+                - ARR-EMNLP 2024
+            </p>
         </section>
-
-
     </main>
 
     <!-- Footer Section -->
@@ -88,4 +96,5 @@
         <p>&copy; 2024 Weerayut Buaphet | <a href="contact.html">Contact Me</a></p>
     </footer>
 </body>
+
 </html>
