--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <!-- Include Font Awesome for Icons (optional) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <!-- Header Section -->
     <header>
@@ -23,7 +25,7 @@
                     <a href="mailto:weerayut.b_s20@vistec.ac.th">Email</a>
                     <a href="https://www.linkedin.com/in/weerayutbu/" target="_blank">LinkedIn</a>
                     <a href="https://github.com/WeerayutBu" target="_blank">GitHub</a>
-                    <a href="cv.html" target="_blank">CV</a>
+                    <a href="cv.html">CV</a>
                 </p>
             </div>
         </div>
@@ -31,45 +33,55 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="https://scholar.google.com/citations?user=GjdGYJIAAAAJ" target="_blank">Google Scholar</a></li>
+                <li><a href="https://scholar.google.com/citations?user=GjdGYJIAAAAJ" target="_blank">Google Scholar</a>
+                </li>
             </ul>
         </nav>
     </header>
 
-
     <!-- Main Content Section -->
     <main>
         <section>
+            <div><strong>Projects</strong></div>
             <div>
-                <p><strong>Thai Nested Named Entity Recognition Corpus.</strong></p>
-                <p>Weerayut Buaphet, Can Udomcharoenchaikit, Peerat Limkonchotiwat, Attapol Rutherford, and Sarana
-                    Nutanong. 2022. In Findings of the Association for Computational Linguistics: ACL 2022, pages
-                    1473–1486, Dublin, Ireland. Association for Computational Linguistics.</p>
-                <p>Aug 2019 – May 2022</p>
-            </div>
-    
-            <div>
-                <p><strong>Few-shot Named Entity Recognition</strong></p>
-                <p>In this project, we focus on leveraging the capabilities of large language models to generate
-                    relevant examples, thereby enhancing the effectiveness of few-shot NER.</p>
-                <p>Under review</p>
+                <p><strong>• MultiLexNorm: Multilingual Lexical Normalization2: </strong> (collocated with NAACL2025)
+                    MultiLexNorm2 is a task to standardize non-canonical text into canonical form across 15 languages,
+                    focusing on non-Indo-European languages.
+                </p>
             </div>
 
             <div>
-                <p><strong>Bi-lingual Named Entity Recognition for financing</strong></p>
-                <p>Creating a finance-NER dataset composed of two languages, Thai and English. This project aims to
+                <p><strong>• Bi-lingual Named Entity Recognition for financing: </strong> (Ongoing project)
+                    Creating a finance-NER dataset composed of two languages, Thai and English. This project aims to
                     study the knowledge transfer from high-resource to low-resource languages in the financial domain.
                 </p>
-                <p>Ongoing project</p>
             </div>
-        </section>    
 
+            <div>
+                <p><strong>• Few-shot Named Entity Recognition:</strong> (Under review)
+                    In this project, we focus on leveraging the capabilities of large language models to generate
+                    relevant examples, thereby enhancing the effectiveness of few-shot NER.
+                </p>
+            </div>
+        </section>
 
-    </main> 
+        <section>
+            <div><strong>Publications</strong></div>
+            <div>
+                <p><strong>• Thai Nested Named Entity Recognition Corpus:</strong> (Aug 2019 – May 2022)<br>
+                    Weerayut Buaphet, Can Udomcharoenchaikit, Peerat Limkonchotiwat, Attapol Rutherford, and Sarana
+                    Nutanong. 2022. In Findings of the Association for Computational Linguistics: ACL 2022, pages
+                    1473–1486, Dublin, Ireland. Association for Computational Linguistics.
+                </p>
+            </div>
+        </section>
 
-<!-- Footer Section -->
-<footer>
-    <p>&copy; 2024 Weerayut Buaphet | <a href="contact.html">Contact Me</a></p>
-</footer>
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Weerayut Buaphet | <a href="contact.html">Contact Me</a></p>
+    </footer>
 </body>
+
 </html>
