--- a/projects.html
+++ b/projects.html
@@ -43,37 +43,26 @@
     <main>
         <section>
             <div><strong>Projects</strong></div>
-            <div>
-                <p><strong>• MultiLexNorm: Multilingual Lexical Normalization2: </strong> (collocated with NAACL2025)
-                    MultiLexNorm2 is a task to standardize non-canonical text into canonical form across 15 languages,
-                    focusing on non-Indo-European languages.
-                </p>
-            </div>
+            <p><strong>• MultiLexNorm: Multilingual Lexical Normalization2: </strong>
+                MultiLexNorm2 is a task to standardize non-canonical text into canonical form across 15 languages,
+                focusing on non-Indo-European languages.</p>
 
-            <div>
-                <p><strong>• Bi-lingual Named Entity Recognition for financing: </strong> (Ongoing project)
-                    Creating a finance-NER dataset composed of two languages, Thai and English. This project aims to
-                    study the knowledge transfer from high-resource to low-resource languages in the financial domain.
-                </p>
-            </div>
+            <p><strong>• Bi-lingual Named Entity Recognition for financing: </strong> (Ongoing project)
+                Creating a finance-NER dataset composed of two languages, Thai and English. This project aims to
+                study the knowledge transfer from high-resource to low-resource languages in the financial domain.</p>
 
-            <div>
-                <p><strong>• Few-shot Named Entity Recognition:</strong> (Under review)
-                    In this project, we focus on leveraging the capabilities of large language models to generate
-                    relevant examples, thereby enhancing the effectiveness of few-shot NER.
-                </p>
-            </div>
+            <p><strong>• Few-shot Named Entity Recognition:</strong> (Under review)
+                In this project, we focus on leveraging the capabilities of large language models to generate
+                relevant examples, thereby enhancing the effectiveness of few-shot NER.</p>
+
         </section>
 
         <section>
             <div><strong>Publications</strong></div>
-            <div>
-                <p><strong>• Thai Nested Named Entity Recognition Corpus:</strong> (Aug 2019 – May 2022)<br>
-                    Weerayut Buaphet, Can Udomcharoenchaikit, Peerat Limkonchotiwat, Attapol Rutherford, and Sarana
-                    Nutanong. 2022. In Findings of the Association for Computational Linguistics: ACL 2022, pages
-                    1473–1486, Dublin, Ireland. Association for Computational Linguistics.
-                </p>
-            </div>
+            <p><strong>• Thai Nested Named Entity Recognition Corpus:</strong> (Aug 2019 – May 2022)<br>
+                Weerayut Buaphet, Can Udomcharoenchaikit, Peerat Limkonchotiwat, Attapol Rutherford, and Sarana
+                Nutanong. 2022. In Findings of the Association for Computational Linguistics: ACL 2022, pages
+                1473–1486, Dublin, Ireland. Association for Computational Linguistics.</p>
         </section>
 
     </main>
