--- a/projects.html
+++ b/projects.html
@@ -47,8 +47,8 @@
                 MultiLexNorm2 is a task to standardize non-canonical text into canonical form across 15 languages,
                 focusing on non-Indo-European languages.</p>
 
-            <p><strong>• Bi-lingual Named Entity Recognition for financing: </strong> (Ongoing project)
-                Creating a finance-NER dataset composed of two languages, Thai and English. This project aims to
+            <p><strong>• Bi-lingual Named Entity Recognition for financial domain: </strong> (Ongoing project)
+                Creating a financial NER dataset composed for two languages, Thai and English. This project aims to
                 study the knowledge transfer from high-resource to low-resource languages in the financial domain.</p>
 
             <p><strong>• Few-shot Named Entity Recognition:</strong> (Under review)
