--- a/cv.html
+++ b/cv.html
@@ -43,11 +43,11 @@
                     
                 </p>
                 <p><strong>• Open Source NER Models</strong> <br>
-                    - Part of the development team for Thai NER datasets and models, including a nested NER model for
-                    fine-grained classification and a bilingual (TH-EN) NER model for the financial domain. <br>
+                    - Part of the development team for Thai NER datasets and models, including <a href="https://github.com/vistec-AI/Thai-NNER">a nested NER model</a> for
+                    fine-grained classification and <a href="https://github.com/vistec-AI/Bilingual-Financial-NER-Model">a bilingual (TH-EN) NER model</a> for the financial domain. <br>
                 </p>
 
-                <p><strong>• Mentor AI Builders (2022)</strong><br>
+                <p><strong>• <a href="https://ai-builders.github.io">Mentor AI Builders (2022)</a></strong><br>
                     This program aims to develop knowledge in Data Science and Artificial Intelligence (AI) for middle and
                 high school students interested in practical applications. My friend and I are responsible for five
                 students working on various projects, such as question generation, fake news detection, and creating a
@@ -61,14 +61,14 @@
                 </p>
 
 
-                <p><strong>• The Robotic Design Contest (RDC 2018)</strong><br>
+                <p><strong>• <a href="https://www.mtec.or.th/rdc2018">The Robotic Design Contest (RDC 2018)</a></strong><br>
                     This program selects national representatives for the International Design Contest RoBoCon (IDC RoBoCon).
                 All teamsare required to design a robot to solve a provided problem. It promotes equality with mixed
                 teams, equal resources, and collaboration, including training sessions at all levels. My friend and I
                 achieved the following:<br>
-                - 2nd place in the Northern region at Chiang Mai University.<br>
-                - 1st place in RDC2018 Thailand at Chulalongkorn University.<br>
-                - 3rd place internationally at the Tokyo Institute of Technology.<br>
+                - 2nd place in the Northern region at Chiang Mai University: <a href="https://www.mtec.or.th/news-event/19473/">Link</a>.<br>
+                - 1st place in RDC2018 Thailand at Chulalongkorn University: <a href="https://www.mtec.or.th/news-event/23481/">Link</a>.<br>
+                - 3rd place internationally at the Tokyo Institute of Technology: <a href="http://www.idc-robocon.org/idc2018/team.html">Link</a>.<br>
                 </p>
                 
         </section>
