--- a/projects.html
+++ b/projects.html
@@ -43,11 +43,11 @@
     <main>
         <section>
             <div><strong>Projects</strong></div>
-            <p><strong>• MultiLexNorm: Multilingual Lexical Normalization2: </strong>
+            <p><strong>• <a href="https://noisy-text.github.io/2025/multi-lexnorm.html#">MultiLexNorm: Multilingual Lexical Normalization2:</a> </strong>
                 MultiLexNorm2 is a task to standardize non-canonical text into canonical form across 15 languages,
                 focusing on non-Indo-European languages.</p>
 
-            <p><strong>• Bi-lingual Named Entity Recognition for financial domain: </strong> (Ongoing project)
+            <p><strong>•  <a href="https://github.com/vistec-AI/Bilingual-Financial-NER-Model">Bi-lingual Named Entity Recognition for financial domain:</a> </strong> (Ongoing project)
                 Creating a financial NER dataset composed for two languages, Thai and English. This project aims to
                 study the knowledge transfer from high-resource to low-resource languages in the financial domain.</p>
 
@@ -62,7 +62,7 @@
             <p><strong>• Thai Nested Named Entity Recognition Corpus:</strong> (Aug 2019 – May 2022)<br>
                 Weerayut Buaphet, Can Udomcharoenchaikit, Peerat Limkonchotiwat, Attapol Rutherford, and Sarana
                 Nutanong. 2022. In Findings of the Association for Computational Linguistics: ACL 2022, pages
-                1473–1486, Dublin, Ireland. Association for Computational Linguistics.</p>
+                1473–1486, Dublin, Ireland. Association for Computational Linguistics. <a href="https://aclanthology.org/2022.findings-acl.116/">Paper</a>, <a href="https://github.com/vistec-AI/Thai-NNER">GitHub</a></p>
         </section>
 
     </main>
