--- a/index.html
+++ b/index.html
@@ -61,7 +61,17 @@
                 knowledge transfer from high-resource to low-resource languages.
             </p>
         </section>
-
+        
+        <section>
+            <div><strong>Education</strong></div>
+            <div>
+                <p><strong>• Ph.D. in Information Science and Technology (5-year program):</strong> GPA: 4.00/4.00 <br> 
+                    Relevant coursework: Natural Language Processing, Computational Machine Intelligence and Applications.</p>
+                    
+                <p><strong>• B.Eng. in Computer Engineering:</strong> GPA: 3.62/4.00 (Top 1) <br> 
+                    Relevant coursework: Data Structures and Algorithms, Operating Systems, Software Engineering.</p>
+            </div>
+        </section>
 
         <section>
             <div><strong>Internship</strong></div>
