--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </p>
             <p>My research focuses on information extraction tasks, Named Entity Recognition (NER), and Representation
                 Learning. My work aims to address the challenges in NER, including limited resources for Thai NER,
-                issues related to open class problems with unseen and long-tail entities, and multilingual and
+                issues related to open class problems with unseen or long-tail entities, multilingual and
                 domain-specific. My co-authors and I have previously worked on developing a Thai Fine-grained Nested NER
                 dataset to bridge the gap between low-resource and high-resource languages. Additionally, we have
                 explored few-shot learning techniques, leveraging large language models to generate relevant examples
